--- a/css/main.css
+++ b/css/main.css
@@ -12,23 +12,19 @@ body {
 
 .wrapper {
 	background-color: #ffffff;
-	width: 1560px;
+	max-width: 1560px;
 	margin: auto;
 	padding-left: 80px;
 	padding-right: 80px;
 }
 
-header {
-	height: 30px;
-}
-
 .wrapper .nav {
-		padding: 25px 0;
-		position: relative;
-		border-bottom: 1px solid #dadada;
-		font-size: 14px;
-		color: #231F20;
-		margin-bottom: 54px;
+	padding: 25px 0;
+	position: relative;
+	border-bottom: 1px solid #dadada;
+	font-size: 14px;
+	color: #231F20;
+	margin-bottom: 54px;
 }
 
 .wrapper .nav .left {
@@ -120,110 +116,113 @@ header {
 	padding-top: 4px;
 }
 
-.wrapper .desc {
+.wrapper .first .desc {
 	padding: 0px 30px 49px 0;
-    width: 994px;
-    height: 451px;
+    /*width: 994px;*/
+    /*height: 451px;*/
     margin-bottom: 63px;
+    position: relative;
 }
 
-.wrapper .desc .cover {
-	display: inline-block;
-	padding-right: 34px;
-	float: left;
-	position: relative;
+
+.wrapper .first .desc .cover {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 253px;
+	margin: auto;
 }
 
-.wrapper .desc .details {
-	display: inline-block;
-	float: left;
+.wrapper .first .desc .content {
+	padding-left: 294px;
+	min-height: 451px;
+    margin-bottom: 100px;
+}
+
+.wrapper .first .desc .content .details {
 	padding: 2px 0 26px 0;
-	width: 473px;
 }
 
-.wrapper .desc .details>h1 {
+.wrapper .first .desc .content .details>h1 {
 	margin: 0;
 	font-weight: 500;
 	font-size: 36px;
 }
 
-.wrapper .desc .details>p {
+.wrapper .first .desc .content .details>p {
 	font-size: 19px;
 	margin: 0;
 }
 
 
-.wrapper .desc .details .author {
+.wrapper .first .desc .content .details .author {
 	font-size: 16px;
 	color: #777274;
 	padding: 15px 0 24px 0;
 }
 
-.wrapper .desc .details .stars>i {
+
+.wrapper .first .desc .content .details .stars>i {
 	color: #FC9951;
 	font-size: 20px;
 	display: inline-block;
+	padding-right: 7px; 
 	float: left;
 }
 
-.wrapper .desc .details .stars .rating {
-	padding: 2px 20px 2px 10px;
-	font-size: 14px;
-	color: #777274;
-	display: inline-block;
-	vertical-align: top;
-	float: left;
+.wrapper .first .desc .content .details .stars .rating {
+	padding: 2px 18px 2px 12px;
+    font-size: 14px;
+    color: #777274;
+    display: inline-block;
+    vertical-align: top;
+    float: left;
 }
 
-.wrapper .desc .details .stars .review>a {
+.wrapper .first .desc .content .details .stars .review>a {
 	color: #FC9951;
-	font-size: 12px;
-	display: inline-block;
+    font-size: 14px;
+    display: inline-block;
+    padding: 0 7px;
 }
 
-.wrapper .desc .summary {
-	width: 670px;
-	display: inline-block;
-	float: left;
-	height: 236px;
+.wrapper .first .desc .content .summary {
+	/*width: 670px;*/
+	/*height: 236px;*/
 }
 
-.wrapper .desc .summary>p {
+.wrapper .first .desc .content .summary>p {
 	font-size: 14px;
 	margin: 0;
 	padding: 12px 0; 
 }
 
-.wrapper .desc .summary>a {
+.wrapper .first .desc .content .summary>a {
 	color: #FC9951;
 	padding: 2px 0 26px 0;
 	display: inline-block;
 }
 
-.wrapper .desc .summary .pages {
+.wrapper .first .desc .content .summary .pages {
 	border-top: 1px solid #dadada;
 	padding-top: 22px;
 }
 
-.wrapper .desc .summary .pages>p {
+.wrapper .first .desc .content .summary .pages>p {
 	font-size: 14px;
 	color: #777274;
 	margin: 0;
 }
 
-.wrapper .desc .cover .selection {
+.wrapper .first .desc .cover .selection {
 	border: 0px solid #dadada;
     border-radius: 25px;
-    display: inline-block;
-    position: absolute;
-    padding: 10.5px 56.59px;
+    text-decoration: none;
+    color: #777274;
+    padding: 11px 57px;
     margin-top: 13px;
     background: #EDEDED;
-}
-
-.reviews {
-	width: 960px;
-	height: 534px;
+    display: block;
 }
 
 .reviews .friends>h3>span {
@@ -232,7 +231,11 @@ header {
 
 .reviews .friends .one {
 	position: relative;
-	padding-bottom: 30px;
+	padding-bottom: 28.1px;
+}
+
+.reviews .friends .one:last-child {
+	padding-bottom: 0px;
 }
 
 .reviews .friends .one .name {
@@ -254,7 +257,7 @@ header {
 
 .reviews .friends .one .name i {
 	color: #FC9951;
-	width: 15px;
+/*	width: 15px;*/
 	height: 16px;
     padding-left: 8px;
 }
@@ -273,7 +276,7 @@ header {
     bottom: 0;
     left: 64px;
     right: 0;
-    margin: 0;
+/*    margin: 0;*/
     position: absolute;
     padding: 4px 0 0 12px; 
 }
@@ -285,7 +288,7 @@ header {
 .reviews .friends>.one>.comments {
 	background-color: #F3F3F3;
 	margin-left: 76px;
-	height: 141px;
+	/*height: 141px;*/
 	padding: 15px;
 }
 
@@ -343,18 +346,38 @@ header {
     color: #777274;
     font-weight: 100;
 }
+
+
+.wrapper .lists>h3 {
+	margin: 0;
+	font-size: 18px;
+	padding-top: 58px;
+}
+
+.wrapper .lists .flist {
+	font-size: 16px;
+}
+
+.wrapper .lists .flist .btitle {
+	color: #231F20;
+}
+
+.wrapper .lists .flist .votes {
+	color: #777274;
+	float: right;
+}
+
+.wrapper .lists .flist .rank {
+	color: #777274;
+	float: left;
 }
 
 
 
 
-
-
-
-
-
-
-
+.first {
+	padding-right: 436px;
+}
 
 
 
