--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 	box-sizing: border-box;
 }
 
+
 body {
 	margin: 0;
 	font-family: Avenir,"sans-serif",arial;
@@ -10,12 +11,17 @@ body {
 	padding: 20px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+}
+
 .wrapper {
 	background-color: #ffffff;
 	max-width: 1560px;
 	margin: auto;
 	padding-left: 80px;
 	padding-right: 80px;
+	position: relative;
 }
 
 .wrapper .nav {
@@ -116,8 +122,8 @@ body {
 	padding-top: 4px;
 }
 
-.wrapper .first .desc {
-	padding: 0px 30px 49px 0;
+.wrapper .first {
+	padding: 0px 451px 49px 0;
     /*width: 994px;*/
     /*height: 451px;*/
     margin-bottom: 63px;
@@ -125,7 +131,7 @@ body {
 }
 
 
-.wrapper .first .desc .cover {
+.wrapper .first .cover {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -133,36 +139,36 @@ body {
 	margin: auto;
 }
 
-.wrapper .first .desc .content {
+.wrapper .first .content {
 	padding-left: 294px;
 	min-height: 451px;
-    margin-bottom: 100px;
+    margin-bottom: 64px;
 }
 
-.wrapper .first .desc .content .details {
+.wrapper .first .content .details {
 	padding: 2px 0 26px 0;
 }
 
-.wrapper .first .desc .content .details>h1 {
+.wrapper .first .content .details>h1 {
 	margin: 0;
 	font-weight: 500;
 	font-size: 36px;
 }
 
-.wrapper .first .desc .content .details>p {
+.wrapper .first .content .details>p {
 	font-size: 19px;
 	margin: 0;
 }
 
 
-.wrapper .first .desc .content .details .author {
+.wrapper .first .content .details .author {
 	font-size: 16px;
 	color: #777274;
 	padding: 15px 0 24px 0;
 }
 
 
-.wrapper .first .desc .content .details .stars>i {
+.wrapper .first .content .details .stars>i {
 	color: #FC9951;
 	font-size: 20px;
 	display: inline-block;
@@ -170,7 +176,7 @@ body {
 	float: left;
 }
 
-.wrapper .first .desc .content .details .stars .rating {
+.wrapper .first .content .details .stars .rating {
 	padding: 2px 18px 2px 12px;
     font-size: 14px;
     color: #777274;
@@ -179,42 +185,37 @@ body {
     float: left;
 }
 
-.wrapper .first .desc .content .details .stars .review>a {
+.wrapper .first .content .details .stars .review>a {
 	color: #FC9951;
     font-size: 14px;
     display: inline-block;
     padding: 0 7px;
 }
 
-.wrapper .first .desc .content .summary {
-	/*width: 670px;*/
-	/*height: 236px;*/
-}
-
-.wrapper .first .desc .content .summary>p {
+.wrapper .first .content .summary>p {
 	font-size: 14px;
 	margin: 0;
 	padding: 12px 0; 
 }
 
-.wrapper .first .desc .content .summary>a {
+.wrapper .first .content .summary>a {
 	color: #FC9951;
 	padding: 2px 0 26px 0;
 	display: inline-block;
 }
 
-.wrapper .first .desc .content .summary .pages {
+.wrapper .first .content .summary .pages {
 	border-top: 1px solid #dadada;
 	padding-top: 22px;
 }
 
-.wrapper .first .desc .content .summary .pages>p {
+.wrapper .first .content .summary .pages>p {
 	font-size: 14px;
 	color: #777274;
 	margin: 0;
 }
 
-.wrapper .first .desc .cover .selection {
+.wrapper .first .cover .selection {
 	border: 0px solid #dadada;
     border-radius: 25px;
     text-decoration: none;
@@ -225,180 +226,346 @@ body {
     display: block;
 }
 
-.reviews .friends>h3>span {
-	font-weight: 100;
-}
 
-.reviews .friends .one {
+
+
+
+
+
+.reviews .review {
 	position: relative;
-	padding-bottom: 28.1px;
+	padding-bottom: 22px;
 }
 
-.reviews .friends .one:last-child {
-	padding-bottom: 0px;
+.reviews .review .review-img {
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
-.reviews .friends .one .name {
-    color: #231F20;
-    font-size: 14px;
-    display: inline-block;
-    top: 10px;
-    bottom: 0;
-    left: 64px;
-    right: 0;
-    margin: 0;
-    position: absolute;
-    padding-left: 12px;
+.reviews .review .review-date {
+	position: absolute;
+	right: 0;
+	top: 6px;
+	color: #777274;
 }
 
-.reviews .friends .one .name>span {
+.reviews .review .review-text {
+	padding-left: 75px;
+	padding-top: 7px;
+}
+
+.reviews .review .review-text .name {
 	font-weight: 500;
 }
 
-.reviews .friends .one .name i {
+.reviews .review .review-text .name i {
 	color: #FC9951;
-/*	width: 15px;*/
-	height: 16px;
-    padding-left: 8px;
 }
 
-.reviews .friends .one .date {
+.reviews .review .review-acts {
+	padding-top: 3px;
+}
+
+.reviews .review .review-acts a {
 	color: #777274;
-	float: right;
-	font-size: 14px;
+	text-decoration: none;
 }
 
-.reviews .friends .one>p{
-	color: #777274;
-    font-size: 14px;
-    display: inline-block;
-    top: 30px;
-    bottom: 0;
-    left: 64px;
-    right: 0;
-/*    margin: 0;*/
-    position: absolute;
-    padding: 4px 0 0 12px; 
+.reviews .review .review-text .stars {
+	font-weight: 400;
 }
 
-.reviews .friends .one>p>span {
-	padding: 0 6px;
+.reviews .review .review-acts .middot {
+	margin: 0 7px;
 }
 
-.reviews .friends>.one>.comments {
-	background-color: #F3F3F3;
-	margin-left: 76px;
-	/*height: 141px;*/
-	padding: 15px;
-}
-
-.reviews .friends>.one>.comments>.cname>p{
-	padding-top: 4px;
-	color: #777274;
-    font-size: 14px;
-    top: 30px;
-    bottom: 0;
-    left: 64px;
-    right: 0;
-    margin: 0;
-} 
-
-.reviews .friends>.one>.comments>.cname {
-	display: inline-block;
-	vertical-align: middle;
-	padding-left: 10px;
-}
-
-.reviews .friends>.one>.comments>.cname>p>span {
-    padding: 0 6px;
-
-}
-
-.reviews .friends>.one>.comments>.crname {
-	padding-top: 25px;
+.reviews .review .review-text .comment {
 	position: relative;
+	background: #F3F3F3;
+	padding: 14px;
+	margin-top: 20px;
 }
 
-.reviews .friends>.one>.comments>.crname>.cn {
+.reviews .review .review-text .comment-rep {
+	position: relative;
+	background: #F3F3F3;
+	padding: 14px 14px 20px 14px;
+}
+
+.reviews .review .review-text .comment-rep .com-img {
+	width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block;
+}
+
+.reviews .review .review-text .comment .com-img {
+	position: absolute;
+	top: 14px;
+	left: 14px;
 	width: 32px;
 	height: 32px;
 	border-radius: 50%;
 	overflow: hidden;
 }
 
-.reviews .friends>.one>.comments>.crname>.cn>img {
-	max-width: 100%;
-	float: left;
-}
-
-.reviews .friends>.one>.comments .crname>.cn>.textbox {
-	display: inline-block;
-    border: 1px solid #ffffff;
-    float: left;
-    position: absolute;
-    top: 25px;
-    bottom: 0px;
-    left: 51px;
-    right: 0;
-    background: #fff;
-    padding: 4px 15px;
-    font-size: 14px;
-    color: #777274;
-    font-weight: 100;
-}
-
-
-.wrapper .lists>h3 {
-	margin: 0;
-	font-size: 18px;
-	padding-top: 58px;
-}
-
-.wrapper .lists .flist {
-	font-size: 16px;
-}
-
-.wrapper .lists .flist .btitle {
+.reviews .review .review-text .comment .comm-details .comm-text {
 	color: #231F20;
 }
 
-.wrapper .lists .flist .votes {
-	color: #777274;
-	float: right;
+.reviews .review .review-text .comment .comm-details {
+	    padding: 12px 0 0 47px;
 }
 
-.wrapper .lists .flist .rank {
+.reviews .review .review-text .comment .comm-details .comm-text .comm-acts .middot {
 	color: #777274;
-	float: left;
 }
 
+.reviews .review .review-text .comment .comm-details .comm-text .comm-acts a {
+	text-decoration: none;
+	color: #777274;
+}
 
+.reviews .review .review-text .comment .comm-details .comm-text .comm-acts span {
+	color: #777274;
+}
 
+.reviews .review .review-text .comment .comm-details .comm-text .comm-acts {
+
+	padding-top: 7px;
+}
+
+.reviews .review .review-text .comment-rep .input {
+    width: 94%;
+    display: inline-block;
+    vertical-align: text-bottom;
+}
+
+.reviews .review .review-text .comment-rep input {
+	padding: 10px;
+    margin-left: 6px;
+    min-width: 100%;
+    color: #777274;
+    font-size: 14px;
+}
+
+.wrapper .lists {
+	padding: 60px 0;
+}
 
 .first {
 	padding-right: 436px;
 }
 
+.second {
+	position: absolute;
+	top: 136px;
+	right: 80px;
+}
 
+.second .suggestion h3 {
+	margin-top: 0;
+	margin-bottom: 15px;
+	font-weight: 900;
+}
 
+.second .byAuthor {
+	margin-top: 37px;
+}
 
+.second .byAuthor a {
+	color: #FC9951;
+	font-size: 14px;
+	display: block;
+}
 
+.second .ads h3 {
+	margin: 0;
+	padding-bottom: 22px;
+	font-weight: 900;
+}
 
+.second .ads {
+	margin-top: 36px;
+	background: #F8F8F8;
+	padding: 20px 0 20px 20px;
+	position: relative;
+}
 
+.second .ads .sbook>img {
+	top: 60px;
+    left: 20px;
+}
 
+.second .ads .sbook {
+	position: absolute;
+}
 
+.second .ads .brief>p {
+	margin: 0;
+	font-size: 16px;
+	color: #231F20;
+	font-weight: 500;
+	max-width: 234px;
+}
 
+.second .ads .brief {
+	font-size: 14px;
+	color: #231F20;
+	padding: 0 0 30px 70px;
+}
 
+.second .ads .brief>p.captions {
+	max-width: 234px;
+	font-size: 14px;
+	font-weight: 100;
+	padding: 11px 0 16px 0;
+}
 
+.second .ads .brief a {
+	color: #FC9951;
+	font-size: 14px;
+}
 
+.first .lists .ranking {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	position: relative;
+	border-bottom: 1px solid #D1D1D1;
+}
 
+.first .lists .ranking:first-of-type {
+	padding-top: 0;
+}
 
+.first .lists .ranking>p {
+	margin: 0; 
+	font-weight: 100;
+}
 
+.first .lists .ranking .voters {
+	text-align: right;
+	color: #777274;
+	position: absolute;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	height: 22px;
+	margin: auto;
+}
 
+.first .lists .ranking .rank {
+	color: #777274;	
+	margin-top: 4px;
+}
 
+.first .lists a{
+	color: #FC9951;
+	font-size: 14px;
+	padding-top: 10px;
+	display: block;
+}
 
+.first .community {
+	position: relative;
+}
 
+.first .community .select {
+	border-top: 1px solid #D1D1D1;
+	border-bottom: 1px solid #D1D1D1;
+}
 
+.first .community .creview a {
+	color: #231F20;
+	font-size: 14px;
+	text-decoration: none;
+	font-weight: 500;
+	padding: 3px 10px 3px 10px;
+	display: inline-block;
+}
 
+.first .community .select .sort>span {
+	font-weight: 100;
+}
 
+.first .community .select .rate {
+	float: right;
+}
+
+.first .community .creview .pic {
+	position: absolute;
+	top: 23px;
+	left: 0;
+}
+
+.first .community .creview {
+	position: relative;
+}
+
+.first .community .revdesc { 
+    padding: 12px 0 0 74px;
+}
+
+.first .community .revdesc .link {
+	text-decoration: underline;
+}
+
+.first .community .select p strong {
+	font-weight: 500;
+}
+
+.first .community .revdesc p i {
+	color: #FC9951;
+}
+
+.first .community .revdesc>p>span {
+	float: right;
+	color: #D1D1D1;
+	display: inline-block;
+}
+
+.first .community .revdesc .count>span {
+	float: none;
+}
+
+.first .community .revdesc .detsum{
+	font-weight: 100;
+    font-size: 14px;
+}
+
+.first .community .select a{	
+	padding: 2px 10px;
+	color: #777274;
+	font-size: 14px;
+	font-weight: 100;
+	display: inline-block;
+}
+
+.first .community .revdesc .count {
+	color: #777274;
+    font-size: 14px;
+    padding: 10px 0;
+}
+
+.first .community .revdesc a {
+	color: #FC9951;
+	padding: 0;
+} 
+
+.page-title {
+	margin-bottom: 34px;
+	font-size: 18px;
+	color: #231F20;
+	font-weight: 900;
+}
+
+.wrapper .first .load {
+	text-align: center;
+	color: #777274;
+	background: #F3F3F3;
+	margin-top: 18px;
+	padding: 13px;
+}
 
